# pack-simulator

./: .eslintrc.json  .gitignore  .prettierignore  README.md  download_cards.sh  dreamborn-dl.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
pricegetter/: .gitignore  README.md  pyproject.toml
pricegetter/pricegetter/: get_prices.py
src/: App.tsx  main.tsx  style.css
src/cards/: data.json  firstchapter.json
src/components/: Card.tsx  CardDisplay.tsx  CardTracker.tsx
src/data/: cards.json  prices.json
src/services/: cardService.ts
src/styles/: App.css  Card.css  CardDisplay.css  CardTracker.css
src/types/: card.ts
